# Vektor-

./: .env.example  .gitignore  CLEANUP_LIST.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  README.md  docker-compose.yml  gemini_scan.html  gemini_scan.json  pyproject.toml  show_report.py  vulnerable_report.html  vulnerable_report.json
.github/workflows/: ci.yml  publish.yml
_archive/internal_docs/: CLAUDE_RESEARCH.md  PRODUCT_PLAN.md  PROJECT_BIBLE.md  SPRINT_PLAN.md
docs/: DEMO.md  INSTALL.md  PHASE_TESTING.md  RELEASE_NOTES.md  USAGE.md
examples/: check_report.py
llmguard/: cli.py  scanner.py
llmguard/attacks/: __init__.py  base.py  data_extraction.py  instruction_hijacking.py  prompt_injection.py  registry.py
llmguard/data/: __init__.py
llmguard/scoring/: reporter.py  severity.py
llmguard/targets/: __init__.py  base.py  factory.py  gemini.py  multi_agent.py  openai_compatible.py
llmguard/utils/: cache.py
outputs/: groq_phase1_scan.html  groq_phase1_scan.json  localapp_ENHANCED.html  localapp_ENHANCED.json  localapp_events_parse.html  localapp_events_parse.json  localapp_forecast.html  localapp_forecast.json  localapp_phase1_findings.json  localapp_v3_events_parse.html  localapp_v3_events_parse.json  localapp_v4_structured.html  localapp_v4_structured.json
scripts/: analyze_results.py  probe_endpoints.py  scan_local_app.py
tests/integration/: test_gemini.py  test_openai.py
tests/unit/: test_attacks.py  test_config.py  test_detection.py  test_diff.py  (+5 more)
vektor/: __init__.py  __main__.py  cli.py  config.py  demo.py
(+42 files in other folders)
